# hw2

./: CLI.cpp  CLI.h  CMakeLists.txt  README.md  main.cpp  testRead.cli  testsInvalid.cli  testsValid.cli
src/: CLI.cpp  Tiff.cpp  Tiff.h  main.cpp
tiffWriteFiles/: xyz.tif
